ingressdeploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressdeploy
  annotations:
   kubernetes.io/ingress.class: kong
   konghq.com/strip-path: "true"
  labels:
    name: ingressdeploy
spec:
 rules:
 - http:
     paths:
     - path: /v1/hello
       pathType: Prefix
       backend:
         service:
           name: hellov1
           port:
             number: 80
     - path: /v1/tasks/task
       pathType: Prefix
       backend:
         service:
           name: rabbitmqproducer
           port:
             number: 80
